# DRF_media_docker

./: .gitignore  README.md  pyproject.toml
drf_media_docker/: manage.py
drf_media_docker/apps/files/: models.py  serializers.py  views.py
drf_media_docker/apps/files/migrations/: 0001_initial.py
drf_media_docker/apps/posts/: admin.py  forms.py  models.py  serializers.py  views.py
drf_media_docker/apps/posts/migrations/: 0001_initial.py  0002_postimage.py
drf_media_docker/apps/users/: admin.py  models.py
drf_media_docker/apps/users/migrations/: 0001_initial.py
drf_media_docker/apps/videos/: models.py  serializers.py  views.py
drf_media_docker/apps/videos/migrations/: 0001_initial.py  0002_video_title.py
drf_media_docker/project_common/: managers.py  models.py  permissions.py  utils.py  views.py
drf_media_docker/project_config/: urls.py
drf_media_docker/project_config/settings/: base.py
